# multichannel-stepper-doser

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  defconfig  partitions.csv  sdkconfig.defaults.legacy
components/app_adc/: CMakeLists.txt
components/app_events/: app_events.c
components/app_events/include/: app_events.h
components/app_http_backend/: CMakeLists.txt  app_http_auth.c  app_http_backend.c  app_http_backend_priv.h  app_http_handlers.c  app_http_json.c
components/app_http_backend/include/: auth.h  web_server.h
components/app_interfaces/: CMakeLists.txt  app_interfaces.c
components/app_interfaces/include/: app_interfaces.h
components/app_monitor/: CMakeLists.txt  app_monitor.c
components/app_monitor/include/: app_monitor.h
components/app_mqtt/: CMakeLists.txt  app_mqtt.c
components/app_mqtt/include/: app_mqtt.h
components/app_mqtt_discovery/: CMakeLists.txt  app_mqtt_discovery.c
components/app_mqtt_discovery/include/: app_mqtt_discovery.h
components/app_provisioning/: CMakeLists.txt  app_provisioning.c  app_provisioning_stub.c
components/app_provisioning/include/: app_provisioning.h
components/app_pumps/: CMakeLists.txt  app_pumps.c  app_pumps_history.c  app_pumps_priv.h  app_pumps_storage.c
components/app_pumps/include/: app_pumps.h
components/app_settings/: CMakeLists.txt  app_settings.c  app_settings_storage.c
components/app_settings/include/: app_settings.h  app_settings_storage.h  board.h
components/app_time/: CMakeLists.txt  app_time.c  app_time_rtc_mcp7940.c
components/app_time/include/: app_time.h  app_time_rtc_mcp7940.h
components/captive/: captive_dns.c
components/ota/: CMakeLists.txt  Kconfig  ota.c
components/tmc2209/: CMakeLists.txt  tmc2209.c
components/tmc2209/include/: tmc2209.h  tmc2209_reg.h
docs/: README.md  development-nvm-writes.md  ios-scaffold-plan.md  pump-history.md  pump-power-loss-testing.md
frontend/: .prettierignor  CLAUDE.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/design/: DESIGN_SYSTEM.md
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx  router.ts  routes.tsx  vite-env.d.ts
frontend/src/components/: app-sidebar.tsx  backend-connection-indicator.tsx  calibration-quality-chart.tsx  calibration-status-indicator.tsx  device-maintenance-actions.tsx  font-scale-provider.tsx  login-form.tsx  nav-flat.tsx  nav-settings.tsx  network-form.tsx  pump-calibration.tsx  pump-form.tsx  pump-runtime-provider.tsx  realtime-provider.tsx  schedule-form.tsx  schedule-utils.ts  services-form.tsx  site-header.tsx
frontend/src/components/home/: connectivity-stability-card.tsx  device-overview-card.tsx  hardware-info.tsx  maintenance-actions-card.tsx  pump-aging-card.tsx  pump-control-card.tsx  pump-control.tsx  pump-history-card.tsx  pump-history-today-card.tsx  software-info.tsx  system-card.tsx
frontend/src/components/ui/: accordion.tsx  (+36 more)
frontend/src/hooks/: use-store.ts
frontend/src/lib/: api.ts  auth-storage.ts  board-config.ts  board-presets.ts  config-export.ts  device-events.ts  http.ts  mock-backend.ts  realtime-mock.ts  service-worker.ts  timezones.ts
frontend/src/pages/: History.tsx  Home.tsx  Login.tsx  Onboarding.tsx  Schedule.tsx  Settings.Aging.tsx  Settings.Api.tsx  Settings.Backup.tsx  Settings.Board.tsx  Settings.Firmware.tsx  Settings.General.tsx  Settings.Network.tsx  Settings.Pumps.tsx  Settings.Services.tsx
frontend/src/styles/: fonts.css
ios/: CLAUDE.md  README.md  project.yml
ios/StepperDoser/: StepperDoserApp.swift
ios/StepperDoser.xcodeproj/: project.pbxproj
ios/StepperDoser/App/: AppRootView.swift  AppShellView.swift  AppTab.swift  RealtimeStatusBanner.swift  TabRouter.swift
ios/StepperDoser/Resources/: Info.plist  PrivacyInfo.xcprivacy
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  auth.c  buttons.c  connect.c  eeprom.c  i2c_driver.c  idf_component.yml  led.c  main.c  mcp7940.c  monitor.c  mqtt.c  pump_backend_stepper.c  pumps.c  pwm_driver.c  rtc.c  stepper_task.c
main/include/: adc.h  buttons.h  connect.h  eeprom.h  i2c_driver.h  led.h  main.h  mcp7940.h  monitor.h  mqtt.h  pump_backend_stepper.h  pumps.h  pwm_driver.h  rtc.h  stepper_task.h  tools.h
react_frontend/: .prettierignor  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
react_frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx  routes.tsx
react_frontend/src/components/: app-sidebar.tsx  device-info.tsx  login-form.tsx  nav-main.tsx  nav-settings.tsx  network-form.tsx  pump-calibration.tsx  pump-control.tsx  pump-form.tsx  schedule-form.tsx  services-form.tsx
react_frontend/src/hooks/: use-autosubmit.ts  use-store.ts
react_frontend/src/lib/: api.ts  http.ts
react_frontend/src/pages/: Home.tsx  Login.tsx  NotFound.tsx  Schedule.tsx  Settings.General.tsx  Settings.Network.tsx  Settings.Pumps.tsx  Settings.Services.tsx
scripts/: build-profile.sh  test-ble-provisioning.py
(+56 files in other folders)
